--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "nodejs-base64": "^2.0.0",
     "qs": "^6.11.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "swr": "^1.3.0"
   },
   "devDependencies": {
     "eslint": "8.11.0",
